--- a/Part_1/Vagrantfile
+++ b/Part_1/Vagrantfile
@@ -1,5 +1,8 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/trusty64"
+  config.vm.boot_timeout = 600
+  config.vm.synced_folder ".", "/vagrant", type: "nfs"
+  # config.cache.scope = :box
   # config.vm.provision "shell" do |ssh|
   #   ssh_pub_key= File.readlines("/home/bchifour/.ssh/id_rsa.pub").first.strip
   #   ssh.inline = <<-SHELL
@@ -14,6 +17,8 @@ Vagrant.configure("2") do |config|
     # machin_1.vm.boot_timeout = 0
     machin_1.vm.provider "virtualbox" do |vb|
       vb.memory = "512"
+      vb.gui = false
+      vb.linked_clone = true
       vb.cpus = 1
     end
     # machin_1.vm.provision "shell" path:
@@ -25,6 +30,8 @@ Vagrant.configure("2") do |config|
     # machin_2.vm.boot_timeout = 0
     machin_2.vm.provider "virtualbox" do |vb|
       vb.memory = "512"
+      vb.linked_clone = true
+      vb.gui = false
       vb.cpus = 1
     end
     # machin_1.vm.provision "shell" path:
