--- a/Part_2/Vagrantfile
+++ b/Part_2/Vagrantfile
@@ -11,6 +11,7 @@ Vagrant.configure("2") do |config|
 
   # base box to use in node
   config.vm.box = "generic/alpine312"
+  # config.vm.box = "bento/debian-11"
 
   # define master node in claster
   config.vm.define MASTER_NODE_NAME do |master|
@@ -18,7 +19,7 @@ Vagrant.configure("2") do |config|
     master.vm.network NETWORK_TYPE, ip: MASTER_NODE_IP
     master.vm.synced_folder HOST_PATH_SYN, GEST_PATH_SYN, type:PROVIDER
     master.vm.provider PROVIDER do |vb|
-      vb.memory = "1024"
+      vb.memory = "2048"
       vb.gui = false
       # vb.linked_clone = true
       vb.name = MASTER_NODE_NAME
