--- a/Part_2/conf/app2.yaml
+++ b/Part_2/conf/app2.yaml
@@ -1,50 +1,53 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app1
+  name: app2
 spec:
   selector:
-    app: app1
+    app: app2
   ports:
   - protocol: TCP
     port: 80
-    targetPort: 80
+    targetPort: 8080
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app1
+  name: app2
   labels:
-    app: app1
+    app: app2
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      app: app1
+      app: app2
   template:
     metadata:
       labels:
-        app: app1
+        app: app2
     spec:
       containers:
-        - name: nginx-container
-          image: nginx:latest
+        - name: hello-kubernetes
+          image: paulbouwer/hello-kubernetes:1.10
+          env:
+          - name: MESSAGE
+            value: "Hello from app2."
           ports:
             - containerPort: 80
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app1-ingress
+  name: app2-ingress
 spec:
   rules:
-  - host: app1.com
+  - host: app2.com
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: app1
+            name: app2
             port:
               number: 80
