--- a/Part_2/conf/app3.yaml
+++ b/Part_2/conf/app3.yaml
@@ -1,50 +1,52 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app1
+  name: app3
 spec:
   selector:
-    app: app1
+    app: app3
   ports:
   - protocol: TCP
     port: 80
-    targetPort: 80
+    targetPort: 8080
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app1
+  name: app3
   labels:
-    app: app1
+    app: app3
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: app1
+      app: app3
   template:
     metadata:
       labels:
-        app: app1
+        app: app3
     spec:
       containers:
-        - name: nginx-container
-          image: nginx:latest
+        - name: hello-kubernetes
+          image: paulbouwer/hello-kubernetes:1.10
+          env:
+          - name: MESSAGE
+            value: "Hello from app3."
           ports:
-            - containerPort: 80
+            - containerPort: 8080
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app1-ingress
+  name: app3-ingress
 spec:
   rules:
-  - host: app1.com
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: app1
+            name: app3
             port:
               number: 80
