--- a/Part_3/simple_app/deployment.yaml
+++ b/Part_3/simple_app/deployment.yaml
@@ -1,21 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app1
+  name: app2
   labels:
-    app: app1
+    app: app2
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      app: app1
+      app: app2
   template:
     metadata:
       labels:
-        app: app1
+        app: app2
     spec:
       containers:
-        - name: nginx-container
-          image: nginx:latest
+        - name: hello-kubernetes
+          image: paulbouwer/hello-kubernetes:1.10
+          env:
+          - name: MESSAGE
+            value: "Hello from app2."
           ports:
             - containerPort: 80
