--- a/Part_3/simple_app/service.yaml
+++ b/Part_3/simple_app/service.yaml
@@ -1,11 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app1
+  name: will-app-service
+  labels:
+    app: will
 spec:
+  type: LoadBalancer
   selector:
-    app: app1
+      app: will
   ports:
-  - protocol: TCP
-    port: 9000
-    targetPort: 8085
+    - protocol: TCP
+      port: 8888
+      targetPort: 8888
