--- a/Part_3/simple_app/deployment.yaml
+++ b/Part_3/simple_app/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: will
-        image: wil42/playground:v1
+        image: nginx:latest
         ports:
-        - containerPort: 8888
+        - containerPort: 80
