--- a/Part_3/simple_app/ingress.yaml
+++ b/Part_3/simple_app/ingress.yaml
@@ -1,7 +1,9 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app1-ingress
+  name: will-app-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
   - host: argocd1.com
